add addTeamMember endpoint
