# issuetracker/src/main/java/dev/oscarrojas/issuetracker/team/TeamController.java
@@ -1,15 +1,33 @@
 package dev.oscarrojas.issuetracker.team;
 
-import org.springframework.stereotype.Controller;
+import dev.oscarrojas.issuetracker.exceptions.DuplicateElementException;
+import dev.oscarrojas.issuetracker.exceptions.NotFoundException;
+import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 
-@Controller
+import java.util.List;
+
+@RestController
+@RequestMapping("/teams/{teamId}")
 public class TeamController {
     
-    private final TeamManager manager;
+    private final TeamManager teamManager;
 
-    public TeamController(TeamManager manager) {
-        this.manager = manager;
+    public TeamController(TeamManager teamManager) {
+        this.teamManager = teamManager;
     }
 
+    @PostMapping("/members")
+    public List<TeamMember> addTeamMember(
+            @PathVariable String teamId, @RequestParam String username) {
+        try {
+            return teamManager.addUserToTeam(username, teamId);
+        } catch (NotFoundException e) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, e.getMessage(), e);
+        } catch (DuplicateElementException e) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage(), e);
+        }
+    }
 
 }
